# oaiRAN_Project

./: .gitattributes  .gitignore  AURORA_IMPLEMENTATION_SUMMARY.md  CMakeLists.txt
ci-scripts/: Jenkinsfile-GitLab-Container  Jenkinsfile-push-registry  ci_infra.yaml  cls_analysis.py  cls_ci_helper.py  cls_cluster.py  cls_containerize.py  cls_module.py  cls_native.py  cls_oai_html.py  cls_oaicitest.py  main.py  xml_class_list.yml
cmake_targets/: build_oai
common/: platform_constants.h
common/utils/aurora/: CMakeLists.txt  aurora.h  aurora_config.c  aurora_config.h  aurora_producer.c
common/utils/aurora/config/: aurora_cu.yaml  aurora_du.yaml  aurora_monolithic.yaml
common/utils/aurora/ebpf/: aurora_ebpf.c  aurora_ebpf.h
common/utils/aurora/receiver/: aurora_receiver.c  aurora_receiver.h
common/utils/aurora/tests/: CMakeLists.txt  test_aurora_config.c  test_aurora_producer.c  test_aurora_stats.c
common/utils/aurora_metrics/: CMakeLists.txt  PROGRESS.md  README.md  aurora_e2_metrics.c  aurora_e2_metrics.h  aurora_metrics_collector.c  aurora_metrics_collector.h  aurora_metrics_config.c  aurora_metrics_config.h  aurora_metrics_csv_reader.c  aurora_metrics_shm.c  aurora_metrics_shm.h  aurora_metrics_types.h  aurora_oru_metrics.c  aurora_oru_metrics.h  aurora_worker_metrics.c  aurora_worker_metrics.h
common/utils/aurora_metrics/tests/: CMakeLists.txt  test_aurora_metrics.c
doc/: 5Gnas.md  Aerial_FAPI_Split_Tutorial.md  BUILD.md  Doxyfile  FEATURE_SET.md  GET_SOURCES.md  L1SIM.md  L2NFAPI.md  L2NFAPI_NOS1.md  L2NFAPI_S1.md  LDPC_OFFLOAD_SETUP.md  NR_NFAPI_archi.md  NR_SA_Tutorial_COTS_UE.md  NR_SA_Tutorial_OAI_CN5G.md  NR_SA_Tutorial_OAI_multi_UE.md  NR_SA_Tutorial_OAI_nrUE.md  ORAN_FHI7.2_Tutorial.md  README.md  RUNMODEM.md  RUN_NR_PRS.md  RUN_NR_multiple_BWPs.md  SW_archi.md  TESTBenches.md  TESTING_OAI_NSA_COTS_UE.md  UnitTests.md  analog_beamforming.md  code-style-contrib.md  cross-compile.md  data_recording.md  environment-variables.md  handover-tutorial.md  iqrecordplayer_usage.md  nfapi.md  physical-simulators.md  system_requirements.md  time_management.md  tuning_and_security.md
docker/: Dockerfile.base.ubuntu  Dockerfile.gNB.aw2s.rocky  Dockerfile.gNB.fhi72.rocky  Dockerfile.gNB.rocky  Dockerfile.gNB.ubuntu  Dockerfile.nr-cuup.rhel9  Dockerfile.nr-cuup.rocky  Dockerfile.nr-cuup.ubuntu  Dockerfile.nrUE.rocky  Dockerfile.nrUE.ubuntu  Dockerfile.phySim.rhel9
executables/: create_tasks.c  create_tasks_ue.c  lte-enb.c  lte-ru.c  lte-softmodem.c  lte-ue.c  lte-uesoftmodem.c  (+10 more)
(+369 files in other folders)
